upgrade to angular material 10

--- a/angular.json
+++ b/angular.json
@@ -32,11 +32,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": [
-              {
-                "postinstall": "ngcc"
-              }
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
