--- a/package.json
+++ b/package.json
@@ -7,22 +7,23 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.2.4",
-    "@angular/cdk": "~9.1.3",
+    "@angular/cdk": "~10.2.7",
     "@angular/common": "~10.2.4",
     "@angular/compiler": "~10.2.4",
     "@angular/core": "~10.2.4",
     "@angular/forms": "~10.2.4",
-    "@angular/material": "^9.1.3",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
     "@angular/service-worker": "~10.2.4",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -31,11 +32,11 @@
     "@angular/cli": "^10.2.1",
     "@angular/compiler-cli": "~10.2.4",
     "@angular/language-service": "~10.2.4",
-    "@types/jasmine": "~3.5.9",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.19.9",
     "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -45,7 +46,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.6.2",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "~4.0.5"
   }
 }
